--- a/Memoria.tex
+++ b/Memoria.tex
@@ -1,4 +1,5 @@
 \documentclass[oneside,a4paper,12pt]{book}
+\usepackage{subcaption}
 
 \usepackage[utf8]{inputenc}
 \usepackage[spanish]{babel} % espanol
@@ -9,6 +10,8 @@
 
 \usepackage{varwidth} % cajas
 
+\title{WebRTC Drone}
+\author{Iván Rodríguez-Bobada Martín}
 
 \usepackage{enumerate} % enumerados
 \usepackage{listings}
